[gd_scene load_steps=22 format=2]

[ext_resource path="res://ui/UILayer.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://ui/ActionSelector/ActionButtons.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/Lobby.gd" type="Script" id=5]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://ui/NetworkDebugLabel.gd" type="Script" id=7]
[ext_resource path="res://ui/HUD/HudLayer.gd" type="Script" id=8]
[ext_resource path="res://ui/HUD/BurstMeter.gd" type="Script" id=9]
[ext_resource path="res://ui/PixeloidSans.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://BottomBar.gd" type="Script" id=11]

[sub_resource type="CanvasItemMaterial" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.5, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0.867188, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 0.290196 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.864444 )
colors = PoolColorArray( 1, 0.296875, 0.659424, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="BGLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="BGLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="GhostLayer" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="GhostLayer"]
modulate = Color( 1, 1, 1, 0.372549 )
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="GhostViewport" type="Viewport" parent="GhostLayer/ViewportContainer"]
unique_name_in_owner = true
size = Vector2( 640, 360 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="HudLayer" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="HudLayer" type="Control" parent="HudLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="HudLayer/HudLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 19.0
margin_right = -37.0
margin_bottom = -236.0
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="HudLayer/HudLayer/VBoxContainer"]
margin_right = 566.0
margin_bottom = 32.0
mouse_filter = 2
alignment = 1

[node name="P1Portrait" type="TextureRect" parent="HudLayer/HudLayer/VBoxContainer/TopBar"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="P1HealthBar" type="TextureProgress" parent="HudLayer/HudLayer/VBoxContainer/TopBar"]
unique_name_in_owner = true
margin_left = 33.0
margin_right = 262.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
max_value = 1000.0
value = 28.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 4 )
fill_mode = 1
nine_patch_stretch = true

[node name="Timer" type="Label" parent="HudLayer/HudLayer/VBoxContainer/TopBar"]
unique_name_in_owner = true
margin_left = 263.0
margin_right = 303.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 15 )
size_flags_horizontal = 0
size_flags_vertical = 2
text = "9999"
align = 1
valign = 1

[node name="P2HealthBar" type="TextureProgress" parent="HudLayer/HudLayer/VBoxContainer/TopBar"]
unique_name_in_owner = true
margin_left = 304.0
margin_right = 533.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
max_value = 1000.0
value = 28.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 4 )
nine_patch_stretch = true

[node name="P2Portrait" type="TextureRect" parent="HudLayer/HudLayer/VBoxContainer/TopBar"]
unique_name_in_owner = true
margin_left = 534.0
margin_right = 566.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="TopBar2" type="HBoxContainer" parent="HudLayer/HudLayer/VBoxContainer"]
margin_top = 33.0
margin_right = 566.0
margin_bottom = 48.0
mouse_filter = 2
alignment = 1

[node name="P1BurstMeter" type="Control" parent="HudLayer/HudLayer/VBoxContainer/TopBar2"]
unique_name_in_owner = true
margin_right = 34.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="ReadyLabel" type="Label" parent="HudLayer/HudLayer/VBoxContainer/TopBar2/P1BurstMeter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = 8.5
margin_right = 37.5
margin_bottom = 19.5
text = "BURST!!"

[node name="Padding" type="Control" parent="HudLayer/HudLayer/VBoxContainer/TopBar2"]
margin_left = 35.0
margin_right = 530.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 15 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 14.13

[node name="P2BurstMeter" type="Control" parent="HudLayer/HudLayer/VBoxContainer/TopBar2"]
unique_name_in_owner = true
margin_left = 531.0
margin_right = 566.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )
reverse = true

[node name="ReadyLabel" type="Label" parent="HudLayer/HudLayer/VBoxContainer/TopBar2/P2BurstMeter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = 8.5
margin_right = 32.0
margin_bottom = 19.5
text = "BURST!!"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HudLayer/HudLayer/VBoxContainer"]
margin_top = 49.0
margin_right = 566.0
margin_bottom = 93.0
mouse_filter = 2

[node name="P1ComboCounter" type="Label" parent="HudLayer/HudLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 44.0
rect_min_size = Vector2( 40, 40 )
custom_fonts/font = SubResource( 9 )
text = "2"
align = 1
valign = 2

[node name="Padding" type="Control" parent="HudLayer/HudLayer/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 525.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="P2ComboCounter" type="Label" parent="HudLayer/HudLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 526.0
margin_right = 566.0
margin_bottom = 44.0
rect_min_size = Vector2( 40, 40 )
custom_fonts/font = SubResource( 9 )
text = "2"
align = 1
valign = 2

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="DebugContainer" type="HBoxContainer" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabelP1" type="Label" parent="UILayer/DebugContainer"]
unique_name_in_owner = true
visible = false
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabelP2" type="Label" parent="UILayer/DebugContainer"]
unique_name_in_owner = true
visible = false
margin_left = 322.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CurrentTick" type="Label" parent="UILayer"]
visible = false
anchor_right = 1.0
margin_bottom = 14.0
align = 1

[node name="MainMenu" type="Control" parent="UILayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonContainer" type="VBoxContainer" parent="UILayer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -58.0
margin_right = 56.0
margin_bottom = 58.0
alignment = 1

[node name="SingleplayerButton" type="Button" parent="UILayer/MainMenu/ButtonContainer"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 112.0
margin_bottom = 57.0
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="UILayer/MainMenu/ButtonContainer"]
unique_name_in_owner = true
margin_top = 58.0
margin_right = 112.0
margin_bottom = 70.0
text = "Multiplayer"

[node name="PostGameButtons" type="VBoxContainer" parent="UILayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 282.0
margin_top = 216.0
margin_right = -282.0
theme = ExtResource( 4 )
alignment = 1

[node name="RematchButton" type="Button" parent="UILayer/PostGameButtons"]
unique_name_in_owner = true
margin_top = 66.0
margin_right = 76.0
margin_bottom = 78.0
theme = ExtResource( 4 )
text = "Rematch"

[node name="QuitButton" type="Button" parent="UILayer/PostGameButtons"]
unique_name_in_owner = true
visible = false
margin_top = 51.0
margin_right = 80.0
margin_bottom = 63.0
theme = ExtResource( 4 )
text = "Quit"

[node name="Lobby" type="Panel" parent="UILayer"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -84.0
margin_right = 104.0
margin_bottom = 84.0
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="NetworkSetupScreen" type="VBoxContainer" parent="UILayer/Lobby"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameEdit" type="LineEdit" parent="UILayer/Lobby/NetworkSetupScreen"]
unique_name_in_owner = true
margin_right = 208.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "username"
placeholder_text = "enter name here"

[node name="PlayerList" type="ItemList" parent="UILayer/Lobby/NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 22.0
margin_right = 208.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NetworkStartButton" type="Button" parent="UILayer/Lobby/NetworkSetupScreen"]
unique_name_in_owner = true
visible = false
margin_top = 148.0
margin_right = 208.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45
text = "start"

[node name="ConnectContainer" type="HBoxContainer" parent="UILayer/Lobby/NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 147.0
margin_right = 208.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 21 )

[node name="HostContainer" type="HBoxContainer" parent="UILayer/Lobby/NetworkSetupScreen/ConnectContainer"]
unique_name_in_owner = true
margin_right = 60.0
margin_bottom = 21.0
size_flags_vertical = 3

[node name="HostButton" type="Button" parent="UILayer/Lobby/NetworkSetupScreen/ConnectContainer/HostContainer"]
unique_name_in_owner = true
margin_right = 60.0
margin_bottom = 21.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "host"

[node name="JoinContainer" type="HBoxContainer" parent="UILayer/Lobby/NetworkSetupScreen/ConnectContainer"]
unique_name_in_owner = true
margin_left = 61.0
margin_right = 208.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinButton" type="Button" parent="UILayer/Lobby/NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_right = 60.0
margin_bottom = 21.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
text = "join"

[node name="IPEdit" type="LineEdit" parent="UILayer/Lobby/NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_left = 61.0
margin_right = 147.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "67.171.216.91"
placeholder_text = "IP"

[node name="NetworkErrorLabel" type="Label" parent="UILayer/Lobby"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 42.0

[node name="NetworkDebugLabel" type="Label" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="BottomBar" type="VBoxContainer" parent="UILayer"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -123.0
margin_right = 320.0
margin_bottom = -8.0
mouse_filter = 2
theme = ExtResource( 4 )
alignment = 1
script = ExtResource( 11 )

[node name="BottomSuperBar" type="HBoxContainer" parent="UILayer/BottomBar"]
visible = false
margin_top = 3.0
margin_right = 640.0
margin_bottom = 18.0
mouse_filter = 2
theme = ExtResource( 4 )

[node name="Timer" type="Control" parent="UILayer/BottomBar/BottomSuperBar"]
margin_right = 640.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 15 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.79

[node name="ActionButtons" type="HBoxContainer" parent="UILayer/BottomBar"]
unique_name_in_owner = true
margin_right = 640.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/BottomBar/ActionButtons"]
margin_right = 319.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/BottomBar/ActionButtons/VBoxContainer"]
margin_top = 8.0
margin_right = 319.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Padding" type="Control" parent="UILayer/BottomBar/ActionButtons/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2

[node name="P1SuperMeter" type="TextureProgress" parent="UILayer/BottomBar/ActionButtons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 21.0
margin_right = 121.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
max_value = 1000.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true

[node name="P1NumSupers" type="Label" parent="UILayer/BottomBar/ActionButtons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 122.0
margin_top = 4.0
margin_right = 132.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 0 )
text = "9"
align = 1

[node name="P1ActionButtons" parent="UILayer/BottomBar/ActionButtons/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 29.0
margin_right = 319.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 73 )
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="UILayer/BottomBar/ActionButtons"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/BottomBar/ActionButtons/VBoxContainer2"]
margin_top = 8.0
margin_right = 320.0
margin_bottom = 28.0
mouse_filter = 2
alignment = 2

[node name="P2NumSupers" type="Label" parent="UILayer/BottomBar/ActionButtons/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 188.0
margin_top = 4.0
margin_right = 198.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 0 )
text = "9"
align = 1

[node name="P2SuperMeter" type="TextureProgress" parent="UILayer/BottomBar/ActionButtons/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 199.0
margin_right = 299.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
max_value = 1000.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true

[node name="Padding" type="Control" parent="UILayer/BottomBar/ActionButtons/VBoxContainer2/HBoxContainer"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2

[node name="P2ActionButtons" parent="UILayer/BottomBar/ActionButtons/VBoxContainer2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 29.0
margin_right = 320.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 73 )
size_flags_horizontal = 3
player_id = 2

[node name="OptionsBar" type="HBoxContainer" parent="UILayer/BottomBar"]
unique_name_in_owner = true
margin_top = 103.0
margin_right = 640.0
margin_bottom = 115.0
alignment = 1

[node name="GhostButton" type="CheckButton" parent="UILayer/BottomBar/OptionsBar"]
unique_name_in_owner = true
margin_left = 280.0
margin_right = 359.0
margin_bottom = 12.0
theme = ExtResource( 4 )
pressed = true
action_mode = 0
text = "show prediction (experimental)"

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
alignment = 1

[node name="Control" type="Control" parent="UILayer/HBoxContainer"]
margin_right = 640.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
